Update to latest.

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway&display=swap">
         <link rel="stylesheet" href="./css/styles.css">
 
-        <title><%= htmlWebpackPlugin.options.title %></title>
+        <title>Vircadia Metaverse</title>
     </head>
     <body>
         <noscript>
